--- a/style.css
+++ b/style.css
@@ -55,3 +55,15 @@
   padding: 10px;
   list-style: none;
 }
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.shimmer-card {
+  background-color: darkgray;
+  width: 200px;
+  margin: 10px;
+  height: 400px;
+}
